# kakapo-server

./: .gitignore  Cargo.toml  README.md  TODO.md  diesel.toml  package-lock.json  package.json  transfer-data-grid.sh
client/: .gitignore  package.json
client/public/: index.html
client/src/: App.js  Entities.js  Header.js  Home.js  Login.js  Queries.js  Tables.js  TablesData.js  TablesInfo.js  config.js  index.js  store.js
client/src/actions/: config.js  data.js  entityCreator.js  index.js  table.js
client/src/data-grid/: InnerDatagrid.js  contextMenuHelper.js  index.js
client/src/entities/: CreateEntities.js  Entities.js  columns.js
client/src/queries/: Queries.js  QueryData.js
client/src/reducers/: createQuery.js  createScript.js  createTable.js  data.js  entityCreator.js  index.js  sidebar.js  table.js
client/src/table/: ContextMenu.js  GridLayout.js  NewTableData.js  OldTables.js  TableData.js  Tables.js  actions.js  contextMenuHelper.js
dependencies/diesel_dynamic_schema/: README.md
dependencies/diesel_dynamic_schema/src/: column.rs  lib.rs
diesel_dynamic_schema/: Cargo.toml
diesel_dynamic_schema/tests/: lib.rs
documentation/: kakapo.postman_collection.json
migrations/00000000000000_diesel_initial_setup/: up.sql
migrations/2018-10-04-133027_create_versioning/: down.sql  up.sql
migrations/2018-10-04-133230_create_meta_tables/: down.sql  up.sql
migrations/2018-10-08-150445_setup_admin/: down.sql  up.sql
old_src/actions/: mod.rs  tableactions.rs
old_src/controller2/: meta.rs  mod.rs  query.rs  repository.rs  schema.rs  types.rs
scripts/: hello_world.py  my_special_query.py  runner.py
src/: lib.rs  main.rs  plugins.rs  server.rs  test_common.rs
src/actions/: management.rs  tableactions.rs
src/arbiter/: Cargo.toml
src/arbiter/src/: main.rs
src/auth/: mod.rs  send_mail.rs  tokens.rs
src/broker/: input.rs  mod.rs  routes.rs
src/client/config/: paths.js
src/client/public/: manifest.json
src/client/src/: ErrorMsg.js  Header.js  Home.js  Login.js  Settings.js  config.js
src/connection/: domain.rs  executor.rs  mod.rs  publisher.rs  py.rs
src/controller/: actions.rs  crud.rs  management.rs  meta.rs  mod.rs  repository.rs  rows.rs  schema.rs  table.rs  types.rs
src/controller/management/: mod.rs  tables.rs
src/data/: api.rs  auth.rs  channels.rs  claims.rs  conversion.rs  dbdata.rs  error.rs  methods.rs  mod.rs  permissions.rs  schema.rs  utils.rs
src/database/: error.rs  error_parser.rs  local.rs  mod.rs  postgresrepo.rs  sql.rs  update_state.rs
src/kakapo_postgres/: connector.rs  data.rs  methods.rs  mod.rs  query.rs  table.rs  update_state.rs  utils.rs
src/kakapo_postgres/database/: error.rs  mod.rs  sql.rs
src/kakapo_redis/: connector.rs  data.rs  mod.rs
src/metastore/: auth_modifier.rs  authentication.rs  authorization.rs  conversion.rs  dbdata.rs  domain_management.rs  mod.rs  permission_store.rs  pub_sub.rs  schema.rs  user_management.rs
src/model/: actions.rs  api.rs  connection.rs  conversion.rs  data.rs  dbdata.rs  entity.rs  handlers.rs  manage.rs  mod.rs  new_actions.rs  query.rs  schema.rs  script.rs  sqlgen.rs  state.rs  table.rs
src/model/actions/: decorator.rs  domain_actions.rs  entity_actions.rs  error.rs  mod.rs  pub_sub_actions.rs  query_actions.rs  results.rs  script_actions.rs  table_actions.rs  user_actions.rs  users.rs
src/model/api/: mod.rs
src/model/auth/: auth_modifier.rs  auth_store.rs  error.rs  internal.rs  mod.rs  permission_store.rs  permissions.rs  send_mail.rs  tokens.rs
src/model/broadcast/: error.rs  mod.rs
src/model/connection/: executor.rs
src/model/database/: mod.rs  table.rs
src/model/database_1/: mod.rs  table.rs
src/model/entity/: conversion.rs  error.rs  internals.rs  mod.rs  post_modification.rs  results.rs  update_state.rs
src/model/manage/: create.rs  (+2 more)
src/old/: script.rs  table.rs
src/plugins/: v1.rs
src/pubsub/: action_receiver.rs  error.rs  input.rs  mod.rs  permissions.rs  routes.rs  server.rs
src/scripting/: docker_utils.rs  error.rs  helpers.rs  mod.rs  update_state.rs
src/server/: Cargo.toml  router.rs
src/sockets/: client.rs  mod.rs  server.rs
src/state/: authentication.rs  authorization.rs  domain_management.rs  error.rs  mod.rs  user_management.rs
src/view/: action_wrapper.rs  actions.rs  bearer_token.rs  environment.rs  error.rs  extensions.rs  handlers.rs  mod.rs  procedure.rs  route_builder.rs  router.rs  routes.rs  serializers.rs  server.rs  session.rs  state.rs  websocket.rs
tests/: test_script.rs  test_sockets.rs  test_tables.rs  test_user.rs
(+82 files in other folders)
