[package]
name = "ninchy"
version = "0.1.0"
authors = ["Atta Zadeh <atta.h.zadeh@gmail.com>"]

[dependencies]
actix = "0.7"
actix-web = "^0.7"

byteorder = "1"
bytes = "0.4"
chrono = { version = "0.4.6", features = ["serde"] }
diesel = { version = "1.0.0", features = ["chrono", "postgres", "r2d2", "serde_json"] }
diesel-dynamic-schema = { path = "./dependencies/diesel_dynamic_schema/" }
dotenv = "0.9.0"
env_logger = "*"
failure = "0.1.2"
futures = "0.1"
json = "*"
log = "0.4"
num_cpus = "1.8.0"
objekt = "0.1.1"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"





