[package]
name = "kakapo_api"
version = "0.1.0"
authors = ["Atta Zadeh <atta.h.zadeh@gmail.com>"]
path = "src/lib.rs"

[dependencies]
actix = "0.7.7"
actix-broker = "0.1.4"
actix-web = { version = "0.7.14", features = ["alpn"] }
base64 = "0.10.0"
bcrypt = "0.2.1"
bigdecimal = "0.0.14"
byteorder = "1"
bytes = "0.4"
chrono = { version = "0.4.6", features = ["serde"] }
env_logger = "*"
failure = "0.1.2"
futures = "0.1"
json = "0.11.13"
jsonwebtoken = "5.0"
linked-hash-map = { version = "0.5.1", features = ["serde_impl"] }
log = "0.4"
num_cpus = "1.8.0"
openssl = "0.10.16"
pq-sys = { version = ">=0.3.0, <0.5.0" }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = "0.1.14"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-uds = "0.2.5"
uuid = { version = "0.7", features = ["serde", "v4"] }


diesel = { version = "1.3.3", features = ["chrono", "postgres", "r2d2", "serde_json", "numeric"] }
#[dependencies.diesel]
#version = "1.3.3"
#features = ["chrono", "postgres", "r2d2", "serde_json", "numeric"]

#[replace]
#"diesel:1.3.3" = { path = "./dependencies/diesel/diesel" }
#"diesel_derives:1.3.0" = { path = "./dependencies/diesel/diesel_derives" }
#"diesel_migrations:1.3.0" = { path = "./dependencies/diesel/diesel_migrations" }
#"migrations_internals:1.3.0" = { path = "./dependencies/diesel/diesel_migrations/migrations_internals" }
#"migrations_macros:1.3.0" = { path = "./dependencies/diesel/diesel_migrations/migrations_macros" }

#[workspace]


[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
