[package]
name = "kakapo_api"
version = "0.1.0"
authors = ["Atta Zadeh <atta.h.zadeh@gmail.com>"]
path = "src/lib.rs"

[dependencies]
actix = "0.7.7"
#actix-web = { version = "0.7.14", features = ["alpn"] }
#TODO: get rid of this once everything is merged
actix-web = { path = "/home/atta/actix-web", features = ["alpn"] }
argonautica = { version = "0.1.5", features = ["serde", "simd"] }
base64 = "0.10.0"
bcrypt = "0.2.1"
bigdecimal = "0.0.14"
byteorder = "1"
bytes = "0.4"
chrono = { version = "0.4.6", features = ["serde"] }
dirs = "1.0.4"
env_logger = "0.6.0"
failure = "0.1.2"
futures = "0.1"
Inflector = "0.11.4"
json = "0.11.13"
jsonwebtoken = "5.0"
linked-hash-map = { version = "0.5.1", features = ["serde_impl"] }
log = "0.4"
num_cpus = "1.8.0"
openssl = "0.10.16"
pq-sys = { version = ">=0.3.0, <0.5.0" }
r2d2 = "0.8.3"
r2d2_redis = "0.8.0"
rand = "0.6"
serde = "1.0.88"
serde_derive = "1.0.88"
serde_json = "1.0"
tempfile = "3.0.6"
time-test = "0.2.1"
tokio = "0.1.14"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-uds = "0.2.5"
uuid = { version = "0.7", features = ["serde", "v4"] }

diesel = { version = "1.3.3", features = ["chrono", "postgres", "r2d2", "serde_json", "numeric"] }
#[dependencies.diesel]
#version = "1.3.3"
#features = ["chrono", "postgres", "r2d2", "serde_json", "numeric"]

#[replace]
#"diesel:1.3.3" = { path = "./dependencies/diesel/diesel" }
#"diesel_derives:1.3.0" = { path = "./dependencies/diesel/diesel_derives" }
#"diesel_migrations:1.3.0" = { path = "./dependencies/diesel/diesel_migrations" }
#"migrations_internals:1.3.0" = { path = "./dependencies/diesel/diesel_migrations/migrations_internals" }
#"migrations_macros:1.3.0" = { path = "./dependencies/diesel/diesel_migrations/migrations_macros" }

#[workspace]


[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
