[package]
name = "diesel-dynamic-schema"
version = "1.0.0"
authors = ["Sean Griffin <sean@seantheprogrammer.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
byteorder = "1"
diesel = "1.0.0"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
diesel = { version = "1.0.0", features = ["sqlite"] }

[[test]]
name = "integration_tests"
path = "tests/lib.rs"
harness = true
required-features = ["diesel/sqlite"]
